framec_tests/language_specific/rust/v3_control_flow/positive/transition_basic_exec.frm
@target rust
// @run-expect: TRANSITION:

system S {
    machine:
        $A {
            e() {
                -> $B()
            }
        }
        $B { }
}

